welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: ')' expected but integer literal found.
if(estFaceMur(Buggle 1)) {
                     ^Program:9: error: ')' expected but '}' found.
	}
        ^