welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFaceMur(Buggle 1)) {
	avance();
} else {
	recule();
}
